# potato-to-bacon

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_DEEP_DIVE.md  Dockerfile  GENERAL_TARIFF_ENGINE_STATUS_REPORT.md  LICENSE  Makefile  PHASE1_CHANGELOG.md  Procfile  README.md  TEAAS_IMPLEMENTATION.md  TEAAS_ROADMAP.md  alembic.ini  pyproject.toml  railway.json  railway.json.bak  what needs to be done next.md
.github/workflows/: ci-lite.yml  ci.yml  realworld-validation.yml
alembic/: env.py
alembic/versions/: 20260211_1200_001_initial_schema.py
configs/: finance.yml
data/: persistence.db  proofs.jsonl  realworld_smoke_skus.jsonl  tenants.json
data/benchmarks/: skus_labeled.jsonl
data/cale/: demo_corpus.json  expert_labels.csv  litigation_counts.json  precedents.json
data/events/: controls.csv  events.csv
data/hts_extract/: hts_expansion_new.jsonl  hts_lines_sample.jsonl  hts_rates_seed.json  notes_sample.json
data/overlays/: adcvd_orders.json  adcvd_orders_full.json  exclusions.json  fta_preferences.json  section232_sample.json  section301_sample.json  section301_subheading.json
data/rulings/: hts_rulings_sample.jsonl
data/sec/: company_tickers.json
docs/: CALE.md  SPRINT_E_INTEGRATION_GUIDE.md  finance.md  quickstart.md
examples/: 01_ke.dsl  02_newton.dsl  03_wave.dsl
models/: .gitignore
reports/: CALE-LAW End-to-End Audit — 2025-12-04 00:23.md  CALE-LAW End-to-End Audit — 2025-12-04 00:25.md  CALE-LAW End-to-End Audit — 2025-12-04 00:28.md  CALE-LAW End-to-End Audit — 2025-12-19 22:46.md  CALE-LAW End-to-End Audit — 2025-12-20 02:24.md  CALE-LAW End-to-End Audit — 2025-12-22 18-29.md  CALE-LAW End-to-End Audit — 2025-12-26 17:25.md  CALE-LAW End-to-End Audit — 2025-12-26 20:16.md  CALE-LAW Staking-IP-Arbitrage — 2025-12-05T22-55-31Z.md  CALE-TARIFF_BENCHMARK_2025-12-22T2149.md  CALE-TARIFF_E2E_20251217T231514Z.md  CALE-TARIFF_E2E_20251219T202851Z.md  CALE-TARIFF_E2E_20251219T210924Z.md  CALE-TARIFF_REALWORLD_SMOKE_20251221T232343Z.md  CALE-TARIFF_Readiness_Audit_2025-12-17T02:17:54.931034+00:00.md  CALE-TARIFF_Readiness_Audit_2025-12-17T03:08:15.111824+00:00.md  CALE-TARIFF_Readiness_Audit_2025-12-17T03:32:25.379895+00:00.md  CALE-TARIFF_Readiness_Audit_2025-12-17T22:31:10.380001+00:00.md  CALE-TARIFF_Readiness_Audit_2025-12-19T20:24:09.251314+00:00.md  CALE-TARIFF_Readiness_Audit_2025-12-19T21:04:51.599088+00:00.md  CALE_AI_Proof_Layer_Experiment_2026-02-07T22:55:27.005725+00:00.md  CALE_AI_Proof_Layer_Experiment_2026-02-07T22:56:40.911833+00:00.md  CALE_AI_Proof_Layer_Experiment_2026-02-07T22:57:14.435299+00:00.md  stress_test_50_report.json
reports/audit/: alpha_entropy_summary.json  latency_summary.json
reports/benchmarks/: latest.json
reports/leverage_alpha/: event_scores.csv  event_scores_delta.csv  evidence.csv  logistic_coeffs.json  metrics.json  top_pairs.json  top_pairs_delta.json  validation_final.json  validation_final_40.json
reports/realworld/: manifest.csv
scripts/: bootstrap_usitc.py  fetch_full_hts.py  generate_hts_seed.py  generate_tariff_readiness_report.py  load_section301.py  migrate_evidence_to_s3.py  migrate_jsonl_to_postgres.py  provision_tenant.py  run_stress_test_50.py  run_tariff_benchmark.py  run_tariff_case_study.py  run_tariff_e2e.py  run_tariff_realworld_smoke.py  run_tests.py  savings_analysis.py  verify_sprint1.py
src/hypothesis/: __init__.py  strategies.py
src/potatobacon/: __init__.py  models.py  observability.py  persistence.py  storage.py  version.py
src/regex/: __init__.py
static/cale/: app.js  index.html  styles.css
sympy/: __init__.py
test_data/: AUTOMOTIVE_SMOKE_TEST_ACTUAL_REPORT.md  AUTOMOTIVE_SMOKE_TEST_ASSESSMENT.md  automotive_bom_smoke_test.csv  stress_test_50_skus.json
tests/: conftest.py  test_adjust.py  test_api_units.py  test_bypass_detect.py  test_integration_bypass.py  test_latency_report.py  test_linker.py  test_stress_50skus.py  test_units_algebra.py  test_units_infer.py  test_units_text.py  test_validation_pipeline_refactor.py
tests/cale/: test_api_law.py  test_cale_parser.py  test_cale_symbolic.py  test_cale_types.py  test_ccs.py  test_cli_smoke.py  test_embed.py  test_graph.py  test_startup_runtime.py  test_static.py  test_suggest.py  test_train_losses.py  test_trainer_e2e.py
tests/data/: e2e_pilot_pack.json  product_specs.py  realworld_skus.json
tools/: audit_repo.py  automotive_smoke_test.py  automotive_smoke_test_direct.py  bypass_rewrite_evidence.py  event_study.py  event_study_core.py  event_study_delta.py  fetch_sec_real.py  finance_dedup.py  finance_extract.py  finance_pipeline.py  finance_real_eval.py  print_evidence.py  real_world_trends.py  real_world_validate.py  run_automotive_bom_e2e.py  run_sprint_g_18sku_test.py  sec_fetch.py  sec_manifest.py  simulate_tax_pipeline.py  test_endpoints.py  train_finance_model.py  train_law_model.py  validate_40.py
web/: index.html  script.js  style.css
(+421 files in other folders)
