[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "potatobacon"
version = "0.1.0"
description = "Physics-first translator: DSL → validated schema → guards → canonical form"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "A.", email = "example@example.com"}]
dependencies = [
  "sympy>=1.12",
  "pint>=0.22",
  "lark>=1.1.9",
  "PyYAML>=6.0.1",
  "requests>=2.32",
  "fastapi>=0.115",
  "numpy>=1.26",
  "httpx>=0.27",
  "click>=8.1",
  "uvicorn>=0.30",
  "pydantic>=2,<3",
  "regex",
  "typing-extensions",
  "z3-solver==4.12.*",
]
[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "hypothesis>=6.112",
  "black>=24.8.0",
  "ruff>=0.6.7",
  "mypy>=1.11",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5"
]
spacy = [
  "spacy>=3,<4"
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["potatobacon*"]

[project.scripts]
ptb = "potatobacon.cli.main:ptb"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
