[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caletariff"
version = "0.1.0"
description = "Tariff Engineering-as-a-Service: Z3-backed HTS classification, duty optimization, and cryptographic proof generation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "A.", email = "example@example.com"}]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.6",
  "pydantic>=2,<3",
  "z3-solver==4.12.*",
  "numpy>=1.26",
  "pandas>=2.2,<3",
  "scikit-learn>=1.4",
  "networkx>=3.2",
  "click>=8.1",
  "httpx>=0.27",
  "requests>=2.32",
  "jinja2>=3.1",
  "PyYAML>=6.0.1",
  "beautifulsoup4>=4.12",
  "pdfplumber>=0.11",
  "reportlab>=4.2",
  "regex",
  "typing-extensions",
  "openpyxl>=3.1",
  # Sprint E: Production Infrastructure
  "celery>=5.3",
  "redis>=5.0",
  "boto3>=1.34",
  "psycopg2-binary>=2.9",
  "alembic>=1.13",
  "sqlalchemy>=2.0",
  # Sprint F: Billing
  "stripe>=7.0",
]
[project.optional-dependencies]
api = [
  "fastapi",
  "uvicorn[standard]",
  "python-multipart"
]
web = [
  "jinja2"
]
cli = [
  "click>=8.1"
]
graph = [
  "networkx"
]
tests = [
  "pytest",
  "hypothesis",
  "pytest-cov>=4.1",
  "reportlab>=4.2",
  "openpyxl>=3.1"
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "hypothesis>=6.112",
  "black>=24.8.0",
  "ruff>=0.6.7",
  "mypy>=1.11",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5"
]
spacy = [
  "spacy>=3,<4"
]
evidence = [
  "pillow>=10.0",
  "pytesseract>=0.3",
  "openpyxl>=3.1"
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["potatobacon*"]

[project.scripts]
ptb = "potatobacon.cli.main:cli"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
